<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".finalActivity">

    <include
        android:id="@+id/custom_bar"
        layout="@layout/app_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="190dp"
                android:id="@+id/congratulating">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wow"
                    android:textColor="#02ADD4"
                    android:textSize="32dp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </TextView>

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="288dp"
                    android:layout_height="44dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/letting_know"
                    android:textAlignment="center"
                    android:textColor="#02ADD4"
                    android:textSize="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView5">

                </TextView>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/technique_rating">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="248dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="48dp"
                    android:text="@string/overall"
                    android:textAlignment="center"
                    android:textColor="#02ADD4"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </TextView>

                <SeekBar
                    android:id="@+id/technique_average"
                    android:layout_width="320dp"
                    android:layout_height="28dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/ic_techniquebar"
                    android:max="200"
                    android:progressDrawable="@android:color/transparent"
                    android:thumb="@drawable/ic_ellipse_47"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView6">

                </SeekBar>

                <TextView
                    android:id="@+id/average_testing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/mark"
                    android:textAlignment="center"
                    android:textColor="#02ADD4"
                    android:textSize="15dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/technique_average">

                </TextView>

            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/total_shots_made">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="249dp"
                    android:layout_height="62dp"
                    android:layout_marginTop="56dp"
                    android:text="@string/total_made"
                    android:textColor="#02ADD4"
                    android:textSize="25dp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </TextView>

                <TextView
                    android:id="@+id/final_made_shots"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="MADE SHOTS"
                    android:textColor="#02ADD4"
                    android:textSize="25dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView7">

                </TextView>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/total_points_earned">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="298dp"
                    android:layout_height="62dp"
                    android:layout_marginTop="56dp"
                    android:text="@string/points_total"
                    android:textAlignment="center"
                    android:textColor="#02ADD4"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </TextView>

                <TextView
                    android:id="@+id/earning_points"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="TOTAL POINTS"
                    android:textColor="#02ADD4"
                    android:textSize="25dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView8">

                </TextView>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/total_badges_won">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="298dp"
                    android:layout_height="55dp"
                    android:layout_marginTop="56dp"
                    android:text="@string/badges_total"
                    android:textAlignment="center"
                    android:textColor="#02ADD4"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </TextView>

                <TableLayout
                    android:id="@+id/tableLayout"
                    android:layout_width="389dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView9">

                    <TableRow
                        android:id="@+id/first_raw"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="30dp"
                        android:gravity="center_horizontal">


                    </TableRow>

                    <TableRow
                        android:id="@+id/second_row"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="30dp"
                        android:gravity="center_horizontal">


                    </TableRow>


                </TableLayout>

                <Button
                    android:id="@+id/testing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="32dp"
                    android:background="#02ADD4"
                    android:text="@string/theEnd"
                    android:textColor="#FFFFFF"
                    android:textSize="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tableLayout">

                </Button>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>